--- a/01-tolerations.yaml
+++ b/01-tolerations.yaml
@@ -6,3 +6,8 @@ spec:
   containers:
   - name: nginx
     image: nginx 
+  tolerations:
+  - key: "hardware"
+    operator: "Equal"
+    value: "gcp"
+    effect: "NoSchedule"
